Project has the needed artifacts to validate and build as a war file.